--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ title                    : "Bin Yang / UNSW"
 title_separator          : "-"
 name                     : &name "Bin Yang"
 description              : &description "PhD student"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://binyang.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://yangbin-xd.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "yangbin-xd/binyang.github.io"
+repository               : "yangbin-xd/yangbin-xd.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
