--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ repository               : "yangbin-xd/yangbin-xd.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "profile.jpg"
+  name             : "Bin Yang"
+  pronouns         : # example: "he/him"  
+  bio              : "PhD student in UNSW"
+  location         : "Sydney"
+  employer         : "University of New South Wales"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "bin.yang@unsw.edu.au" 
 
   # Academic websites
   academia         : # URL
@@ -51,7 +51,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/yangbin-xd"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -79,7 +79,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : # Username
+  youtube          : # "https://www.youtube.com/watch?v=KqihgPd0c2o"
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
