--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author:
   orcid            : "https://orcid.org/0000-0003-2358-9623"
   semantic         : # URL
   ssrn             : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
   scopus           : # URL
   zotero           : # URL
@@ -57,7 +57,7 @@ author:
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  # bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -79,7 +79,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : # "https://www.youtube.com/watch?v=KqihgPd0c2o"
+  youtube          : # binyang-unsw
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
